responsive nav bar
added javascript to pages for responsive nav bar

--- a/projects/meta.html
+++ b/projects/meta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Illustration | Apologia</title>
+	<title>Regina | UI/UX | Meta!</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,24 +21,22 @@
 		</div>
 	</header>
 
-
-	
-	<div class="box_content">
+<div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/apologia-01.png" style= "height:660px; width:510px;">
+			<img src="../assets/projecttile-4.png" style= "height:450px; width:450spx;">
 		</div>
+
 		<p>
-		The Dartmouth Apologia is a journal, blog and forum that articulates Christian perspectives in the academic community. Apologia asked me to design the front and back of its 2018 Spring issue, whose cover article revolved around Plato's Allegory of the Cave. 
-		After reading the article and researching the meaning behind Plato's thought, I created a cover that portrayed the essence of the freed prisoner returning to the cave with the knowledge of the real world. 
+		This is quite meta and by no means a sly "humble-brag/undercover self-call" on my part. I thought I'd just document a bit of my process of creating this site since I figured it's about time I learn HTML/CSS/Javascript. I've found that, as a UI/UX designer working with front-end developers, it's so important to understand the engineering side so that I can 1. be more mindful of their process when I'm creating designs and 2. better communicate my ideas to them. 
 		</p>
 		<p>
-		<b>TAKEAWAYS</b>
+		So, I watched a few youtube videos and played around with some online tutorials to create this site over my junior summer. I wrote basic HTML/CSS and included a bit of Javascript for the Design Thinking page. Once I had a general template, I wrote out documentation and description for the projects I’ve designed. The hardest part honestly was getting myself to stop - I would start coding/writing after dinner and suddenly realize that it's 3AM! 
 		</p>
+		<p><b>TAKEAWAYS</b></p>
 		<p>
-		I was given a lot of freedom with the cover design given the established logo/general layout that stayed consistent with previous issues. This was the first project that required research to gain a better understanding of the design challenge. I also made sure to ask many questions since I wanted this cover to accurately reflect Apologia's mission. Being informed strongly aided my design process, and I'll bring this research phase to future projects with partners. 
+		I am starting to delve deeper into the UI/UX field, and I'm so excited to explore even more. I've spoken with a few web engineers during my internship at Cogo Labs to ask for feedback and advice on moving forward. I will be learning React next and working more closely with developers… we'll see what happens!
 		</p>
-		 
-	</div>
+</div>
 	<br>
 	<br>
 	<footer>
