--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -4,25 +4,22 @@
 	<title>Regina | UI/UX | Nudg</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 <body>
-	<header>
-	<div class="container">
-		<h1 class="logo"><a href="index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:45.2px; width:210px;"></a>
-		</h1>
-		<nav>
-			<ul>
-				<li><a href="../designthinking.html" class="unselected">Design Thinking</a></li>
-				<li><a href="../uiux.html">UI/UX</a></li>
-				<li><a href="../illustration.html" class="unselected">Illustration</a></li>
-				<li><a href="../branding.html" class="unselected">Branding</a></li>
-				<li><a href="../misc.html" class="unselected">Misc</a></li>
-				<li><a href="../about.html" class="unselected">About</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+	<div style="padding-top: 50px;"></div>
+	<header class="container">
+		<a href="index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
+		<div class="topnav" id="myTopnav">
+			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
+			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
+			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
+			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
+			<a href="../misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="../about.html" class="unselected">About</a>
+			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
+		</div>
+	</header>
 
 <div class="box_content">
 		<div class="proj_img">
@@ -32,10 +29,10 @@
 		<b>Status: Prototyping / Iterating</b>
 		</p>
 		<p>
-		We are living in a technological age where we’re able to instantly communicate with any number of people through our devices. Why then, with all our instant messaging devices and social media apps, is it so difficult to maintain relationships with those around us? 
+		We are living in a technological age where we're able to instantly communicate with any number of people through our devices. Why then, with all our instant messaging devices and social media apps, is it so difficult to maintain relationships with those around us? 
 		</p>
 		<p>
-		Enter Nudg. Nudg is relationship management app that helps users maintain and build relationships with their friends by sending a “nudg”. The user can create automatic nudgs or manually input reminders, keep track of conversations and write follow-up notes-to-self, and view contacts in a “heat map” configuration which sorts contacts in order of communication frequency. 
+		Enter Nudg. Nudg is relationship management app that helps users maintain and build relationships with their friends by sending a "nudg". The user can create automatic nudgs or manually input reminders, keep track of conversations and write follow-up notes-to-self, and view contacts in a "heat map" configuration which sorts contacts in order of communication frequency. 
 		</p>
 		<p>
 		I worked as a designer on this team during my Junior Spring at the DALI Lab. Because this was Nudg’s first term at DALI, we started from a blank slate and conducted user interviews to understand our target audience’s needs. After some insightful discussions, we created our Feature Spec and Project Proposal. Then onto designing! I worked with the other designer on the team to create wireframes and high-fidelity mockups in Figma, which can be found <a href="https://www.figma.com/proto/U6UWhi4oTIMQShWtoHnaXCkf/Nudg?node-id=318%3A14&scaling=min-zoom" class="link">here.</a>
@@ -84,4 +81,14 @@
 	</footer>
 
 </body>
+<script type="text/javascript">
+	function clickNav() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
 </html>
