--- a/projects/wiw.html
+++ b/projects/wiw.html
@@ -4,25 +4,22 @@
 	<title>Regina | Branding | Women in the Wilderness</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 <body>
-	<header>
-	<div class="container">
-		<h1 class="logo"><a href="index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:45.2px; width:210px;"></a>
-		</h1>
-		<nav>
-			<ul>
-				<li><a href="../designthinking.html" class="unselected">Design Thinking</a></li>
-				<li><a href="../uiux.html" class="unselected">UI/UX</a></li>
-				<li><a href="../illustration.html" class="unselected">Illustration</a></li>
-				<li><a href="../branding.html">Branding</a></li>
-				<li><a href="../misc.html" class="unselected">Misc</a></li>
-				<li><a href="../about.html" class="unselected">About</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+	<div style="padding-top: 50px;"></div>
+	<header class="container">
+		<a href="index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
+		<div class="topnav" id="myTopnav">
+			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
+			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
+			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
+			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
+			<a href="../misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="../about.html" class="unselected">About</a>
+			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
+		</div>
+	</header>
 
 
 	
@@ -44,4 +41,14 @@
 	</footer>
 
 </body>
+<script type="text/javascript">
+	function clickNav() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
 </html>
