refining nav bar
refined nav bar click feature, added some more pages, added links to "featured projects" panel

--- a/branding.html
+++ b/branding.html
@@ -15,7 +15,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="active">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -23,15 +23,16 @@
 
 
 <div class="container_featuredProjects">
-	<a href="projects/ef.html"><img class="tile" src="assets/projecttile-40.png" style="height:300px; width:300px;"></a>
-	<a href="projects/dmc.html"><img class="tile" src="assets/projecttile-29.png" style="height:300px; width:300px;"></a>
-	<a href="projects/sdc.html"><img class="tile" src="assets/projecttile-31.png" style="height:300px; width:300px;"></a>
-	<a href="projects/earthweek.html"><img class="tile" src="assets/earthweeklogo.png" style="height:300px; width:300px;"></a>
-	<a href="projects/bgd.html"><img class="tile" src="assets/projecttile-27.png" style="height:300px; width:300px;"></a>
-	<a href="projects/wiw.html"><img class="tile" src="assets/projecttile-28.png" style="height:300px; width:300px;"></a>
-	<a href="projects/saam.html"><img class="tile" src="assets/projecttile-32.png" style="height:300px; width:300px;"></a>
-	<a href="projects/alianza.html"><img class="tile" src="assets/projecttile-33.png" style="height:300px; width:300px;"></a>
-	<a href="projects/doc.html"><img class="tile" src="assets/projecttile-34.png" style="height:300px; width:300px;"></a>
+	<a href="projects/ef.html"><img class="tile" src="assets/projecttile-40.png"></a>
+	<a href="projects/dmc.html"><img class="tile" src="assets/projecttile-29.png"></a>
+	<a href="projects/sdc.html"><img class="tile" src="assets/projecttile-31.png"></a>
+	<a href="projects/earthweek.html"><img class="tile" src="assets/earthweeklogo.png"></a>
+	<a href="projects/bgd.html"><img class="tile" src="assets/projecttile-27.png"></a>
+	<a href="projects/wiw.html"><img class="tile" src="assets/projecttile-28.png"></a>
+	<a href="projects/saam.html"><img class="tile" src="assets/projecttile-32.png"></a>
+	<a href="projects/alianza.html"><img class="tile" src="assets/projecttile-33.png"></a>
+	<a href="projects/doc.html"><img class="tile" src="assets/projecttile-34.png"></a>
+	<a href="projects/humbug.html"><img class="tile" src="assets/projecttile-10.png"></a>
 	<!-- <img class="tile" src="assets/projecttile-47.png" style="height:300px; width:300px;"> -->
 </div>
 
