--- a/illustration.html
+++ b/illustration.html
@@ -15,7 +15,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="active">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -24,21 +24,21 @@
 
 
 <div class="container_featuredProjects">
-	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png" style="height:300px; width:300px;"></a>
-	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png" style="height:300px; width:300px;"></a>
-	<a href="projects/trips.html"><img class="tile" src="assets/projecttile-11.png" style="height:300px; width:300px;"></a>
-	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-25.png" style="height:300px; width:300px;"></a>
-	<a href="projects/brewhaha.html"><img class="tile" src="assets/projecttile-14.png" style="height:300px; width:300px;"></a>
-	<a href="projects/campdart.html"><img class="tile" src="assets/projecttile-15.png" style="height:300px; width:300px;"></a>
-	<a href="projects/cabaret.html"><img class="tile" src="assets/projecttile-49.png" style="height:300px; width:300px;"></a>
-	<a href="projects/apologia.html"><img class="tile" src="assets/projecttile-50.png" style="height:300px; width:300px;"></a>
-	<a href="projects/vox.html"><img class="tile" src="assets/projecttile-46.png" style="height:300px; width:300px;"></a>
-	<a href="projects/lunarnewyear.html"><img class="tile" src="assets/projecttile-21.png" style="height:300px; width:300px;"></a>
-	<a href="projects/climbingteam.html"><img class="tile" src="assets/projecttile-22.png" style="height:300px; width:300px;"></a>
-	<a href="projects/dog.html"><img class="tile" src="assets/projecttile-23.png" style="height:300px; width:300px;"></a>
-	<a href="projects/grafficity.html"><img class="tile" src="assets/projecttile-48.png" style="height:300px; width:300px;"></a>
-	<a href="projects/thefifty.html"><img class="tile" src="assets/projecttile-30.png" style="height:300px; width:300px;"></a>
-	<a href="projects/provost.html"><img class="tile" src="assets/projecttile-24.png" style="height:300px; width:300px;"></a>
+	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
+	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png"></a>
+	<a href="projects/trips.html"><img class="tile" src="assets/projecttile-11.png"></a>
+	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-25.png"></a>
+	<a href="projects/brewhaha.html"><img class="tile" src="assets/projecttile-14.png"></a>
+	<a href="projects/campdart.html"><img class="tile" src="assets/projecttile-15.png"></a>
+	<a href="projects/cabaret.html"><img class="tile" src="assets/projecttile-49.png"></a>
+	<a href="projects/apologia.html"><img class="tile" src="assets/projecttile-50.png"></a>
+	<a href="projects/vox.html"><img class="tile" src="assets/projecttile-46.png"></a>
+	<a href="projects/lunarnewyear.html"><img class="tile" src="assets/projecttile-21.png"></a>
+	<a href="projects/climbingteam.html"><img class="tile" src="assets/projecttile-22.png"></a>
+	<a href="projects/dog.html"><img class="tile" src="assets/projecttile-23.png"></a>
+	<a href="projects/grafficity.html"><img class="tile" src="assets/projecttile-48.png"></a>
+	<a href="projects/thefifty.html"><img class="tile" src="assets/projecttile-30.png"></a>
+	<a href="projects/provost.html"><img class="tile" src="assets/projecttile-24.png"></a>
 	<!-- <img class="tile" src="assets/projecttile-26.png" style="height:300px; width:300px;"> -->
 	
 </div>
