--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -39,15 +39,12 @@
 	
 
 <div class="container_featuredProjects">
-	<img src="assets/projecttile-08.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-09.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-10.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-11.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-12.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-13.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-14.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-15.png" style="height:300px; width:300px;">
-	<img src="assets/projecttile-16.png" style="height:300px; width:300px;">
+	<a href="projects/sa.html"><img class="tile" src="assets/projecttile-39.png"></a>
+	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
+	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png"></a>
+	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-12.png"></a>
+	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
 </div>
 
 <footer>
