--- a/misc.html
+++ b/misc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Miscellaneous</title>
+	<title>Regina | Modeling</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,19 +15,17 @@
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="active">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="active">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
 
 <div class="container_featuredProjects">
-	<img class="tile" src="assets/projecttile-13.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-35.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-36.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-37.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-38.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-39.png" style="height:300px; width:300px;">
+	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
+	<img class="tile" src="assets/projecttile-35.png">
+	<img class="tile" src="assets/projecttile-37.png">
+	<img class="tile" src="assets/projecttile-38.png">
 
 </div>
 
