--- a/projects/humbug.html
+++ b/projects/humbug.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Illustration | BrewHaHa</title>
+	<title>Regina | Branding | Humbug</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,8 +13,8 @@
 		<div class="topnav" id="myTopnav">
 			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
-			<a href="../illustration.html" class="active">Illustration</a><a class="hide">__</a>
-			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
+			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
+			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
 			<a href="../misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
@@ -25,19 +25,30 @@
 	
 	<div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/brewhaha_sticker3.jpg" style= "height:349px; width:461px;">
-			<img src="../assets/harfest.png" style= "height:336px; width:461px;">
+			<img src="../assets/projecttile-10.png" style= "height:450px; width:450px;">
 		</div>
 		<p>
-		Each spring, the Dartmouth Organic Farm throws the zero-waste event "BrewHaHa" featuring local food, brews, and live music. I was asked to created a design that could be used on stickers and t-shirts, which you can see here. I do wish I had better materials when I designed this (used my finger on a friend's iPad mini screen, this was before I had access to/learned Adobe Suite), so the line quality and general smoothness could be better. Still, I'm very happy with how it turned out. Eventually I also created a "Harfest" sticker, which is the Organic Farm's fall version of this event!
+		I created this banner and logo for the Humbug, a student-run literary magazine at Dartmouth. The logo takes inspiration from the Humbug character in the Phantom Tollbooth. I was going for something elegant but playful in the illustration. I chose a serif font that had a "classy" feel to go with the logo, and was inspired by designs by "The New Yorker" in my creation process.  
 		</p>
-		 
+		<p>
+		This first banner was my initial design (with the font created by hand with the vector tool), and after receiving feedback, I switched the font and color to better suit the literary magazine feel as well as have consistency with Dartmouth's green color palette.	
+		</p>
+		<div class="proj_img">
+			<img src="../assets/hum1.png" style= "height:240px; width:964px;">
+		</div>
+		<p>
+		The following design is the final revision I created after taking feedback from the Humbug's editor-in-chief.
+		</p>
+		<div class="proj_img">
+			<img src="../assets/hum2.png" style= "height:211px; width:965px;">
+		</div>
 	</div>
 	<br>
 	<br>
 	<footer>
 	&copy; Regina Yan
 	</footer>
+
 </body>
 <script type="text/javascript">
 	function clickNav() {
