--- a/uiux.html
+++ b/uiux.html
@@ -16,7 +16,7 @@
 			<a href="uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -25,11 +25,11 @@
 
 
 <div class="container_featuredProjects">
-	<img class="tile" src="assets/projecttile-44.png" style="height:300px; width:300px;">
-	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png" style="height:300px; width:300px;"></a>
-	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png" style="height:300px; width:300px;"></a>
-	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png" style="height:300px; width:300px;"></a>
-	<img class="tile" src="assets/projecttile-42.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-44.png">
+	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
+	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
+	<img class="tile" src="assets/projecttile-42.png">
 </div>
 
 
