--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="about.html" class="active">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
