--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -9,13 +9,13 @@
 <body>
 	<div style="padding-top: 50px;"></div>
 	<header class="container">
-		<a href="index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
+		<a href="../index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
 		<div class="topnav" id="myTopnav">
 			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
-			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
+			<a href="../uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="../misc.html" class="unselected">Misc</a><a class="hide">__</a>
+			<a href="../misc.html" class="unselected">Modeling</a><a class="hide">__</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
