page additions, edited home
edited home page description, finished write-up for The Dish

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
 
 <div class="container_about">
 	<img src="assets/profpic.png" alt="Profile Photo" style="height: 350px; width: 420px;">
-	<p>empathetic, resilient, goofy</p>
+	<h2><b>empathetic, resilient, goofy</b></h2>
 	<p>Much of who I am is based on my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
-	<p>I also don't normally look like I do in that image - I like the photo though, and it's from my <a href="projects/sa.html" class="link">climbing expedition in South Africa.</a> Anyways, outside of being an extremely ~windswept-hair~ individual, I am a figure skater, dad joke generator, lover of the outdoors, dedicated journal-er, and aspiring designer!</p>
-	<p>I started designing my freshman year at Dartmouth College, where I am currently a rising senior (scary!) studying <b>Engineering</b> and <b>Studio Art</b> with a minor in <b>Human-Centered Design</b>. I'm self-taught, but that doesn't mean I haven't learned plenty of lessons from my experiences creating designs and working at Dartmouth's DALI (Digital Arts Leadership Initiative) Lab. I have found that I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's down the road. Thanks for taking the time to look at my portfolio, and please let me know if you have any feedback!</p>
+	<p>I also don't normally look like I do in that image - I like the photo though, and it's from my <a href="projects/sa.html" class="link">climbing expedition in South Africa.</a> Anyways, outside of having crazy hair days, I am a figure skater, dad joke generator, lover of the outdoors, dedicated journal-er, and aspiring designer!</p>
+	<p>I started designing my freshman year at Dartmouth College, where I am currently a rising senior studying <b>Engineering</b> and <b>Studio Art</b> with a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's down the road.</p>
 	<br>
 	<br>
 	<div class="container_aboutCourses">
