--- a/index.html
+++ b/index.html
@@ -24,25 +24,33 @@
 	</header>
 
 <div class="container_home">
+	<div class="home_intro">
+	<h2><b>Hi there, I'm </b></h2>
 	<h1>
-		Hi, I'm Regina!
+		REGINA
 	</h1>
 	<h2>
-		Welcome to my portfolio site
+		I'm a designer and engineer with a serious passion for the outdoors and technology.
 	</h2>
+	<h2>
+		Thanks for stopping by!
+	</h2>
+
+	</div>
+	
 </div>
 <div class="container_intro">
-	<h2>
-		Featured Projects
+	<h2 style="font-size: 28px">
+		<b>FEATURED PROJECTS</b>
 	</h2>
 </div>
 	
 
 <div class="container_featuredProjects">
 	<a href="projects/sa.html"><img class="tile" src="assets/projecttile-39.png"></a>
-	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
+	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png"></a>
-	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
 	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-12.png"></a>
 	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
 </div>
