--- a/uiux.html
+++ b/uiux.html
@@ -25,7 +25,7 @@
 
 
 <div class="container_featuredProjects">
-	<img class="tile" src="assets/projecttile-44.png">
+	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
 	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
 	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
