changing text width

--- a/projects/thedish.html
+++ b/projects/thedish.html
@@ -65,7 +65,7 @@
 		<b>RESEARCH & NEED-FINDING</b>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/internz.png" style= "height:400px; width:620spx;">
+			<img src="../assets/internz.png" style= "height:300px; width:465px;">
 			<p class="subtitle">A fun sticky-note brainstorming session with the team to map existing products, current experiences, and user pain points</p>
 		</div>
 		<p>
@@ -88,7 +88,7 @@
 			We also launched social media campaigns and generated a user base through our Facebook and Instagram accounts. 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/insta.png" style= "height:480px; width:580px;">
+			<img src="../assets/insta.png" style= "height:384px; width:465px;">
 			<p class="subtitle">We used Instagram to engage with users and build a relationship with trendy restaurants in the area.</p>
 		</div>
 		<br>
@@ -105,7 +105,7 @@
 		In the meantime, I worked on wireframing the MVP site on paper and with Balsamiq. We were inspired by this cartoon that helped us decide that a simple (but working) prototype should be our priority, rather than trying to implement every single feature from the get-go. 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/wireframin.png" style= "height:380px; width:675px;">
+			<img src="../assets/wireframin.png" style= "height:285px; width:510px;">
 			<p class="subtitle">Initial wireframing focused on 3 main pages: the landing/home page, the trend page, and the restaurant page</p>
 		</div>
 		<br>
@@ -115,7 +115,7 @@
 		<b>PROTOTYPING & USER TESTING</b>	
 		</p>
 		<div class="proj_img">
-			<img src="../assets/hifi.png" style= "height:340px; width:865px;">
+			<img src="../assets/hifi.png" style= "height:255px; width:650px;">
 			<p class="subtitle">Desktop and mobile high-fidelity mockups of the 3 main pages</p>
 		</div>
 		<p>
@@ -125,7 +125,7 @@
 		I also created a Style Guide to help our engineers as they coded the MVP with React.
 		</p>
 		<div class="proj_img">
-			<img src="../assets/styleguide.png" style= "height:520px; width:835px;">
+			<img src="../assets/styleguide.png" style= "height:390px; width:625px;">
 			<p class="subtitle">Snippet of the style guide</p>
 		</div>
 		<br>
@@ -135,7 +135,7 @@
 		<b>LAUNCH!</b>	
 		</p>
 		<div class="proj_img">
-			<img src="../assets/dabeach.png" style= "height:425px; width:655px;">
+			<img src="../assets/dabeach.png" style= "height:320px; width:485px;">
 			<p class="subtitle">Does this count as work?</p>
 		</div>
 		<p>
@@ -158,7 +158,7 @@
 		We also tested various ad campaigns to see which would attract users more, and we further focused our campaigns as we learned from previous CPC results. Granularity was a key word during this phrase since we reached a point where we were able to target more and more specific users to optimize our metrics.
 		</p>
 		<div class="proj_img">
-			<img src="../assets/ads.png" style= "height:358px; width:982px;">
+			<img src="../assets/ads.png" style= "height:263px; width:735px;">
 			<p class="subtitle">We also A/B tested two styles of ads to see which performed better. The ad on the right ultimately had the lower CPC</p>
 		</div>
 		<p>
