--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 
 <body>
-	<div style="padding-top: 50px;"></div>
+	<div class="head">
+	<div style="padding-top: 35px;"></div>
 	<header class="container">
 		<a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
 		<div class="topnav" id="myTopnav">
@@ -22,6 +23,7 @@
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
+	</div>
 
 <div class="container_home">
 	<div class="home_intro">
@@ -35,10 +37,9 @@
 	<h2>
 		Thanks for stopping by!
 	</h2>
-
 	</div>
-	
 </div>
+
 <div class="container_intro">
 	<h2 style="font-size: 28px">
 		<b>FEATURED PROJECTS</b>
@@ -54,6 +55,7 @@
 	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-12.png"></a>
 	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
 </div>
+
 
 <footer>
 	&copy; Regina Yan
