--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div style="padding-top: 50px;"></div>
+<div class="head">
+	<div style="padding-top: 35px;"></div>
 	<header class="container">
 		<a href="../index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
 		<div class="topnav" id="myTopnav">
@@ -20,7 +21,9 @@
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
+</div>
 
+<div class="top_padding"></div>
 <div class="box_content">
 		<div class="proj_img">
 			<img src="../assets/projecttile-43.png" style= "height:450px; width:450spx;">
