--- a/projects/stressball.html
+++ b/projects/stressball.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<div class="head">
 	<div style="padding-top: 50px;"></div>
 	<header class="container">
 		<a href="../index.html"><img src="../assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
@@ -20,9 +21,9 @@
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
+</div>
 
-
-	
+<div class="top_padding"></div>	
 	<div class="box_content">
 		<div class="container_video">
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/wtvrAmJGzM4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
