--- a/uiux.html
+++ b/uiux.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-	<div style="padding-top: 50px;"></div>
+	<div class="head">
+	<div style="padding-top: 35px;"></div>
 	<header class="container">
 		<a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
 		<div class="topnav" id="myTopnav">
@@ -21,9 +22,10 @@
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
+	</div>
 	
 
-
+<div class="top_padding"></div>
 <div class="container_featuredProjects">
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
