logo hover feature

--- a/uiux.html
+++ b/uiux.html
@@ -11,7 +11,7 @@
 	<div class="head">
 	<div style="padding-top: 35px;"></div>
 	<header class="container">
-		<a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:39.2px; width:210px;"></a>
+		<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
 			<a href="designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="uiux.html" class="active">UI/UX</a><a class="hide">__</a>
