added intro image

--- a/designthinking.html
+++ b/designthinking.html
@@ -25,9 +25,9 @@
 	</div>
 <div style="padding-top: 150px;"></div>
 
+<img class="centered" src="assets/DTmockups.png" style= "height:270px; width:845px;">
 
 <div class="container_intro">
-<!-- 	<video src="assets/designthinking.mp4" style="height: 216px; width: 288px;" autoplay loop></video>  -->
 	<p>I took a design thinking class my junior year where I learned and put design thinking methodology into practice. Here are some samples of the work I created!</p>
 </div>
 <br>
