--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		REGINA
 	</h1>
 	<h2>
-		I'm a designer and engineer with a serious passion for the outdoors and technology.
+		I'm a designer and engineer with a passion for the outdoors and technology.
 	</h2>
 	<h2>
 		Thanks for stopping by!
