--- a/uiux.html
+++ b/uiux.html
@@ -31,7 +31,7 @@
 	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
 	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
 	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
-	<img class="tile" src="assets/projecttile-42.png">
+	<a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
 </div>
 
 
