added Lily writeup

--- a/misc.html
+++ b/misc.html
@@ -28,7 +28,7 @@
 <div class="container_featuredProjects">
 	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
 	<img class="tile" src="assets/projecttile-35.png">
-	<img class="tile" src="assets/projecttile-37.png">
+	<a href="projects/lily.html"><img class="tile" src="assets/projecttile-37.png"></a>
 	<img class="tile" src="assets/projecttile-38.png">
 
 </div>
