added pages to modeling

--- a/misc.html
+++ b/misc.html
@@ -27,8 +27,10 @@
 
 <div class="container_featuredProjects">
 	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
-	<img class="tile" src="assets/projecttile-35.png">
+	<a href="projects/superfb.html"><img class="tile" src="assets/projecttile-35.png"></a>
 	<a href="projects/lily.html"><img class="tile" src="assets/projecttile-37.png"></a>
+	<a href="projects/engs33.html"><img class="tile" src="assets/projecttile-53.png"></a>
+	<a href="projects/lapdesk.html"><img class="tile" src="assets/projecttile-54.png"></a>
 	<img class="tile" src="assets/projecttile-38.png">
 
 </div>
