--- a/projects/lily.html
+++ b/projects/lily.html
@@ -26,7 +26,7 @@
 <div class="top_padding"></div>
 <div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/projecttile-37.png" style= "height:450px; width:450spx;">
+			<img src="../assets/projecttile-37.png" style= "height:450px; width:450px;">
 		</div>
 
 		<p>
